multiple test correction

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -5504,8 +5504,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple test correction\n",
+    "\n",
+    "Below are the hypotheses that are rejected after multiple test correction with\n",
+    "* various methods such as `fdr_bh`, the classic Benjamini-Hochberg procedure\n",
+    "* various model family such as $\\chi^2$ and binomial-logistic\n",
+    "* various size $\\alpha$ for FDR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">chi^2</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">binomial-logistic</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>0.050</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>0.010</th>\n",
+       "      <th>0.050</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>0.010</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>fdr_bh</th>\n",
+       "      <td>[ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fdr_tsbh</th>\n",
+       "      <td>[ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fdr_tsbky</th>\n",
+       "      <td>[ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>holm-sidak</th>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bonferroni</th>\n",
+       "      <td>[Schizophrenia GWAS, Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[Psychiatric GWAS]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       chi^2  \\\n",
+       "                                                       0.050   \n",
+       "fdr_bh      [ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]   \n",
+       "fdr_tsbh    [ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]   \n",
+       "fdr_tsbky   [ASD GWAS, Schizophrenia GWAS, Psychiatric GWAS]   \n",
+       "holm-sidak            [Schizophrenia GWAS, Psychiatric GWAS]   \n",
+       "bonferroni            [Schizophrenia GWAS, Psychiatric GWAS]   \n",
+       "\n",
+       "                                                          \\\n",
+       "                                             0.025 0.010   \n",
+       "fdr_bh      [Schizophrenia GWAS, Psychiatric GWAS]    []   \n",
+       "fdr_tsbh    [Schizophrenia GWAS, Psychiatric GWAS]    []   \n",
+       "fdr_tsbky   [Schizophrenia GWAS, Psychiatric GWAS]    []   \n",
+       "holm-sidak                                      []    []   \n",
+       "bonferroni                                      []    []   \n",
+       "\n",
+       "                                 binomial-logistic              \n",
+       "                                             0.050 0.025 0.010  \n",
+       "fdr_bh      [Schizophrenia GWAS, Psychiatric GWAS]    []    []  \n",
+       "fdr_tsbh    [Schizophrenia GWAS, Psychiatric GWAS]    []    []  \n",
+       "fdr_tsbky   [Schizophrenia GWAS, Psychiatric GWAS]    []    []  \n",
+       "holm-sidak  [Schizophrenia GWAS, Psychiatric GWAS]    []    []  \n",
+       "bonferroni                      [Psychiatric GWAS]    []    []  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def do_fdr(method, alpha, test='chi^2'):\n",
+    "    val = sm.stats.multipletests(binom_chisq_pvals_scz[test], alpha=alpha, method=method)\n",
+    "    res = list(binom_chisq_pvals_scz.index[val[0]])\n",
+    "    return(res)\n",
+    "\n",
+    "def get_fdr_rejected(test):\n",
+    "    fdr_methods = ['fdr_bh', 'fdr_tsbh', 'fdr_tsbky', 'holm-sidak', 'bonferroni']\n",
+    "    fdr_rejected = {alpha: [do_fdr(method, alpha, test) for method in fdr_methods] for alpha in alphas}\n",
+    "    fdr_rejected = pd.DataFrame(fdr_rejected, index=fdr_methods)\n",
+    "    return(fdr_rejected)\n",
+    "\n",
+    "alphas = [0.05, 0.025, 0.01]\n",
+    "fdr_rejected = pd.concat([get_fdr_rejected(test) for test in ['chi^2', 'Dx[T.SCZ]']], axis=1)\n",
+    "fdr_rejected.columns = pd.MultiIndex.from_product([['chi^2', 'binomial-logistic'], alphas])\n",
+    "fdr_rejected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5530,8 +5680,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -5540,7 +5697,7 @@
        "['named-figure/enrichment-5-plots.png', 'named-figure/enrichment-5-plots.pdf']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5650,7 +5807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -5668,7 +5825,7 @@
        " 'named-figure/enrichment-5-plots_scz.pdf']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5692,7 +5849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -5701,7 +5858,7 @@
        "['named-figure/enrichment-chisq.png', 'named-figure/enrichment-chisq.pdf']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5736,7 +5893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5754,7 +5911,7 @@
        " 'named-figure/enrichment-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5778,7 +5935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -5788,7 +5945,7 @@
        " 'named-figure/enrichment-model-chisq.pdf']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5824,7 +5981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5842,7 +5999,7 @@
        " 'named-figure/enrichment-model-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5866,7 +6023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -5876,7 +6033,7 @@
        " 'named-figure/age-effect-pois-binom.pdf']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5914,7 +6071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -5924,7 +6081,7 @@
        " 'named-figure/binom-four-resid-types.pdf']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5948,7 +6105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -5958,7 +6115,7 @@
        " 'named-figure/binom-four-resid-types_scz.pdf']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5989,7 +6146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -5998,7 +6155,7 @@
        "['named-figure/resid-pois.png', 'named-figure/resid-pois.pdf']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6024,7 +6181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -6033,7 +6190,7 @@
        "['named-figure/resid-pois_scz.png', 'named-figure/resid-pois_scz.pdf']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6057,7 +6214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -6066,7 +6223,7 @@
        "['named-figure/resid-binom.png', 'named-figure/resid-binom.pdf']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6090,7 +6247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -6099,7 +6256,7 @@
        "['named-figure/resid-binom_scz.png', 'named-figure/resid-binom_scz.pdf']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6123,7 +6280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -6133,7 +6290,7 @@
        " 'named-figure/scz_gwas_genes-poisson-partial-resid-plot_scz.pdf']"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6161,7 +6318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -6169,13 +6326,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 60303,\n",
-      "  \"iopub_port\": 48313,\n",
-      "  \"stdin_port\": 45897,\n",
-      "  \"control_port\": 46275,\n",
-      "  \"hb_port\": 45197,\n",
+      "  \"shell_port\": 57473,\n",
+      "  \"iopub_port\": 59361,\n",
+      "  \"stdin_port\": 45613,\n",
+      "  \"control_port\": 42811,\n",
+      "  \"hb_port\": 38215,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"8f0fea31-92d303fdd5d0ff9f31b5a4c8\",\n",
+      "  \"key\": \"16286540-6ed5c7084dc66da6226bcb90\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -6184,7 +6341,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-7cf36c1e-5fc8-4f8b-ad16-afc2c48cd126.json\n",
+      "    $> jupyter <app> --existing kernel-90bfbb0a-9f80-43ff-befd-b6bc3289b599.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
