--- a/presentations/bsm-ms/bsm.bib
+++ b/presentations/bsm-ms/bsm.bib
@@ -18898,19 +18898,20 @@ title = {{Steady-state current-voltage relationship of the Na/K pump in guinea p
 volume = {94},
 year = {1989}
 }
-@article{Benjamini:1995ml,
-author = {Benjamini, Yoav and Hochberg, Yosef},
-doi = {10.2307/2346101},
-file = {:home/attila/bibliography/mendeley/Benjamini, Hochberg/Benjamini, Hochberg - 1995 - Controlling the False Discovery Rate A Practical and Powerful Approach to Multiple Testing.pdf:pdf},
-issn = {00359246},
-journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
-keywords = {statistics},
-mendeley-tags = {statistics},
-number = {1},
-pages = {289--300},
-title = {{Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing}},
-volume = {57},
-year = {1995}
+
+@Article{Benjamini:1995ml,
+  author        = {Benjamini, Yoav and Hochberg, Yosef},
+  journal       = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  title         = {{Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing}},
+  year          = {1995},
+  issn          = {00359246},
+  number        = {1},
+  pages         = {289--300},
+  volume        = {57},
+  doi           = {10.2307/2346101},
+  file          = {:/home/attila/bibliography/mendeley/Benjamini, Hochberg/Benjamini, Hochberg - 1995 - Controlling the False Discovery Rate A Practical and Powerful Approach to Multiple Testing.pdf:PDF},
+  keywords      = {statistics},
+  mendeley-tags = {statistics},
 }
 @article{Williams:2006uq,
 abstract = {It has been known for some time that many proteins are marginally stable. This has inspired several explanations. Having noted that the functionality of many enzymes is correlated with subunit motion, flexibility, or general disorder, some have suggested that marginally stable proteins should have an evolutionary advantage over proteins of differing stability. Others have suggested that stability and functionality are contradictory qualities, and that selection for both criteria results in marginally stable proteins, optimised to satisfy the competing design pressures. While these explanations are plausible, recent research simulating the evolution of model proteins has shown that selection for stability, ignoring any aspects of functionality, can result in marginally stable proteins because of the underlying makeup of protein sequence-space. We extend this research by simulating the evolution of proteins, using a computational protein model that equates functionality with binding and catalysis. In the model, marginal stability is not required for ligand-binding functionality and we observe no competing design pressures. The resulting proteins are marginally stable, again demonstrating that neutral evolution is sufficient for explaining marginal stability in observed proteins.},
@@ -21984,6 +21985,112 @@ PMC4495769[pmcid]},
   url      = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4495769/},
 }
 
+@Article{Wilson2019,
+  author    = {Wilson, Daniel J.},
+  journal   = {Proceedings of the National Academy of Sciences},
+  title     = {The harmonic mean p-value for combining dependent tests},
+  year      = {2019},
+  issn      = {0027-8424},
+  number    = {4},
+  pages     = {1195--1200},
+  volume    = {116},
+  abstract  = {The widespread use of Bonferroni correction encumbers the scientific process and wastes opportunities for discovery presented by big data, because it discourages exploratory analyses by overpenalizing the total number of statistical tests performed. In this paper, I introduce the harmonic mean p-value (HMP), a simple to use and widely applicable alternative to Bonferroni correction motivated by Bayesian model averaging that greatly improves statistical power while maintaining control of the gold standard false positive rate. The HMP has a range of desirable properties and offers a different way to think about large-scale exploratory data analysis in classical statistics.Analysis of {\textquotedblleft}big data{\textquotedblright} frequently involves statistical comparison of millions of competing hypotheses to discover hidden processes underlying observed patterns of data, for example, in the search for genetic determinants of disease in genome-wide association studies (GWAS). Controlling the familywise error rate (FWER) is considered the strongest protection against false positives but makes it difficult to reach the multiple testing-corrected significance threshold. Here, I introduce the harmonic mean p-value (HMP), which controls the FWER while greatly improving statistical power by combining dependent tests using generalized central limit theorem. I show that the HMP effortlessly combines information to detect statistically significant signals among groups of individually nonsignificant hypotheses in examples of a human GWAS for neuroticism and a joint human{\textendash}pathogen GWAS for hepatitis C viral load. The HMP simultaneously tests all ways to group hypotheses, allowing the smallest groups of hypotheses that retain significance to be sought. The power of the HMP to detect significant hypothesis groups is greater than the power of the Benjamini{\textendash}Hochberg procedure to detect significant hypotheses, although the latter only controls the weaker false discovery rate (FDR). The HMP has broad implications for the analysis of large datasets, because it enhances the potential for scientific discovery.},
+  doi       = {10.1073/pnas.1814092116},
+  eprint    = {https://www.pnas.org/content/116/4/1195.full.pdf},
+  groups    = {bsm-ms},
+  publisher = {National Academy of Sciences},
+  url       = {https://www.pnas.org/content/116/4/1195},
+}
+
+@Article{Korthauer2019,
+  author   = {Korthauer, Keegan and Kimes, Patrick K. and Duvallet, Claire and Reyes, Alejandro and Subramanian, Ayshwarya and Teng, Mingxiang and Shukla, Chinmay and Alm, Eric J. and Hicks, Stephanie C.},
+  journal  = {Genome Biology},
+  title    = {A practical guide to methods controlling false discoveries in computational biology},
+  year     = {2019},
+  issn     = {1474-760X},
+  number   = {1},
+  pages    = {118},
+  volume   = {20},
+  abstract = {In high-throughput studies, hundreds to millions of hypotheses are typically tested. Statistical methods that control the false discovery rate (FDR) have emerged as popular and powerful tools for error rate control. While classic FDR methods use only p values as input, more modern FDR methods have been shown to increase power by incorporating complementary information as informative covariates to prioritize, weight, and group hypotheses. However, there is currently no consensus on how the modern methods compare to one another. We investigate the accuracy, applicability, and ease of use of two classic and six modern FDR-controlling methods by performing a systematic benchmark comparison using simulation studies as well as six case studies in computational biology.},
+  doi      = {10.1186/s13059-019-1716-1},
+  groups   = {bsm-ms},
+  refid    = {Korthauer2019},
+  url      = {https://doi.org/10.1186/s13059-019-1716-1},
+}
+
+@Article{Stephens2017,
+  author    = {Stephens, Matthew},
+  journal   = {Biostatistics (Oxford, England)},
+  title     = {False discovery rates: a new deal},
+  year      = {2017},
+  issn      = {1465-4644},
+  month     = apr,
+  number    = {27756721},
+  pages     = {275--294},
+  volume    = {18},
+  abstract  = {We introduce a new Empirical Bayes approach for large-scale hypothesis testing, including estimating false discovery rates (FDRs), and effect sizes. This approach has two key differences from existing approaches to FDR analysis. First, it assumes that the distribution of the actual (unobserved) effects is unimodal, with a mode at 0. This "unimodal assumption" (UA), although natural in many contexts, is not usually incorporated into standard FDR analysis, and we demonstrate how incorporating it brings many benefits. Specifically, the UA facilitates efficient and robust computation-estimating the unimodal distribution involves solving a simple convex optimization problem-and enables more accurate inferences provided that it holds. Second, the method takes as its input two numbers for each test (an effect size estimate and corresponding standard error), rather than the one number usually used ($p$ value or $z$ score). When available, using two numbers instead of one helps account for variation in measurement precision across tests. It also facilitates estimation of effects, and unlike standard FDR methods, our approach provides interval estimates (credible regions) for each effect in addition to measures of significance. To provide a bridge between interval estimates and significance measures, we introduce the term "local false sign rate" to refer to the probability of getting the sign of an effect wrong and argue that it is a superior measure of significance than the local FDR because it is both more generally applicable and can be more robustly estimated. Our methods are implemented in an R package ashr available from http://github.com/stephens999/ashr.},
+  comment   = {27756721[pmid]
+PMC5379932[pmcid]},
+  database  = {PubMed},
+  doi       = {10.1093/biostatistics/kxw041},
+  groups    = {bsm-ms},
+  keywords  = {*Empirical Bayes, *False discovery rates, *Multiple testing, *Shrinkage, *Unimodal, *Bayes Theorem, *Data Interpretation, Statistical, Humans, *Models, Statistical},
+  language  = {eng},
+  publisher = {Oxford University Press},
+  url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5379932/},
+}
+
+@Article{Benjamini2006,
+  author   = {Benjamini, Yoav and Krieger, Abba M. and Yekutieli, Daniel},
+  journal  = {Biometrika},
+  title    = {Adaptive linear step-up procedures that control the false discovery rate},
+  year     = {2006},
+  issn     = {0006-3444},
+  month    = sep,
+  number   = {3},
+  pages    = {491--507},
+  volume   = {93},
+  abstract = {The linear step-up multiple testing procedure controls the false discovery rate at the desired level q for independent and positively dependent test statistics. When all null hypotheses are true, and the test statistics are independent and continuous, the bound is sharp. When some of the null hypotheses are not true, the procedure is conservative by a factor which is the proportion m0/m of the true null hypotheses among the hypotheses. We provide a new two-stage procedure in which the linear step-up procedure is used in stage one to estimate m0, providing a new level q′ which is used in the linear step-up procedure in the second stage. We prove that a general form of the two-stage procedure controls the false discovery rate at the desired level q. This framework enables us to study analytically the properties of other procedures that exist in the literature. A simulation study is presented that shows that two-stage adaptive procedures improve in power over the original procedure, mainly because they provide tighter control of the false discovery rate. We further study the performance of the current suggestions, some variations of the procedures, and previous suggestions, in the case where the test statistics are positively dependent, a case for which the original procedure controls the false discovery rate. In the setting studied here the newly proposed two-stage procedure is the only one that controls the false discovery rate. The procedures are illustrated with two examples of biological importance.},
+  doi      = {10.1093/biomet/93.3.491},
+  file     = {:/home/attila/Downloads/933491.pdf:PDF},
+  url      = {https://doi.org/10.1093/biomet/93.3.491},
+}
+
+@Article{Bondi2017,
+  author   = {Bondi, Mark W. and Edmonds, Emily C. and Salmon, David P.},
+  journal  = {Journal of the International Neuropsychological Society : JINS},
+  title    = {Alzheimer's Disease: Past, Present, and Future},
+  year     = {2017},
+  issn     = {1355-6177},
+  month    = oct,
+  number   = {29198280},
+  pages    = {818--831},
+  volume   = {23},
+  abstract = {Although dementia has been described in ancient texts over many centuries (e.g., "Be kind to your father, even if his mind fail him." - Old Testament: Sirach 3:12), our knowledge of its underlying causes is little more than a century old. Alzheimer published his now famous case study only 110 years ago, and our modern understanding of the disease that bears his name, and its neuropsychological consequences, really only began to accelerate in the 1980s. Since then we have witnessed an explosion of basic and translational research into the causes, characterizations, and possible treatments for Alzheimer's disease (AD) and other dementias. We review this lineage of work beginning with Alzheimer's own writings and drawings, then jump to the modern era beginning in the 1970s and early 1980s and provide a sampling of neuropsychological and other contextual work from each ensuing decade. During the 1980s our field began its foundational studies of profiling the neuropsychological deficits associated with AD and its differentiation from other dementias (e.g., cortical vs. subcortical dementias). The 1990s continued these efforts and began to identify the specific cognitive mechanisms affected by various neuropathologic substrates. The 2000s ushered in a focus on the study of prodromal stages of neurodegenerative disease before the full-blown dementia syndrome (i.e., mild cognitive impairment). The current decade has seen the rise of imaging and other biomarkers to characterize preclinical disease before the development of significant cognitive decline. Finally, we suggest future directions and predictions for dementia-related research and potential therapeutic interventions. (JINS, 2017, 23, 818-831).},
+  comment  = {29198280[pmid]
+PMC5830188[pmcid]},
+  database = {PubMed},
+  doi      = {10.1017/S135561771700100X},
+  keywords = {*Alzheimer’s disease, *Biomarkers, *Clinical trials, *Cognition, *Mild cognitive impairment, *Neuroimaging, *Neuropsychology, *Neuroscience, *Alzheimer Disease/complications/epidemiology/history/psychology, Cognitive Dysfunction/diagnosis/*etiology/history, History, 20th Century, History, 21st Century, Humans, Neuropsychological Tests},
+  language = {eng},
+  url      = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5830188/},
+}
+
+@Article{VanCauwenberghe2016,
+  author   = {Van Cauwenberghe, Caroline and Van Broeckhoven, Christine and Sleegers, Kristel},
+  journal  = {Genetics in Medicine},
+  title    = {The genetic landscape of Alzheimer disease: clinical implications and perspectives},
+  year     = {2016},
+  issn     = {1530-0366},
+  number   = {5},
+  pages    = {421--430},
+  volume   = {18},
+  abstract = {The search for the genetic factors contributing to Alzheimer disease (AD) has evolved tremendously throughout the years. It started from the discovery of fully penetrant mutations in Amyloid precursor protein, Presenilin 1, and Presenilin 2 as a cause of autosomal dominant AD, the identification of the ɛ4 allele of Apolipoprotein E as a strong genetic risk factor for both early-onset and late-onset AD, and evolved to the more recent detection of at least 21 additional genetic risk loci for the genetically complex form of AD emerging from genome-wide association studies and massive parallel resequencing efforts. These advances in AD genetics are positioned in light of the current endeavor directing toward translational research and personalized treatment of AD. We discuss the current state of the art of AD genetics and address the implications and relevance of AD genetics in clinical diagnosis and risk prediction, distinguishing between monogenic and multifactorial AD. Furthermore, the potential and current limitations of molecular reclassification of AD to streamline clinical trials in drug development and biomarker studies are addressed.},
+  doi      = {10.1038/gim.2015.117},
+  refid    = {Van Cauwenberghe2016},
+  url      = {https://doi.org/10.1038/gim.2015.117},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
@@ -22000,4 +22107,5 @@ PMC4495769[pmcid]},
 1 SearchGroup:Polygenic risk score\;0\;"polygenic risk score" OR PRS OR title = polygenic OR ("genetic risk" AND author = Visscher)\;0\;0\;1\;\;\;\;;
 1 StaticGroup:GWAS target discovery\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:bsm-ms\;0\;1\;0x8a8a8aff\;\;\;;
+1 KeywordGroup:Alzheimer's\;0\;abstract\;Alzheimer.*\;0\;1\;1\;0x8a8a8aff\;\;\;;
 }
