--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -92,6 +92,8 @@ individuals.
 
 \subsubsection*{Genome wide somatic SNV call rate for Control and Schizophrenic samples}
 
+[notebook/2020-06-10-annotate-explore-variants]
+
 We extracted NeuN+ nuclei from postmortem samples of the DLPFC of 40 control
 and 61 schizophrenic individuals and subjected them to short read DNA
 sequencing at 50--540\(\times\) coverage.  Next we called somatic SNVs using a
@@ -110,6 +112,8 @@ the exception of an outlier schizophrenic sample reaching \(\approx 200\).
 
 \subsubsection*{Genome wide somatic SNV call rate depends on sequencing read depth}
 
+[notebook/2020-12-09-walsh-data]
+
 The finding that somatic SNV call rate is unaltered in schizophrenics was
 expected based on similar results for rare germline and de-novo
 SNVs~\citep{Purcell2014,Singh2017,Fromer2014,Rees2020}.
@@ -127,6 +131,8 @@ maintain high specificity.
 %\end{figure}
 
 \subsubsection*{Distribution of allele frequency and read depth}
+
+[notebook/2020-08-13-select-vars]
 
 The joint distribution of read depth and estimated allele frequency across all
 4141 somatic SNVs in our data set showed that increasing read depth allowed
@@ -156,14 +162,141 @@ B
 
 \subsection*{Enrichment analysis}
 
-\subsubsection*{Genomic elements and gene sets}
 
 Studies of rare germline and de-novo SNVs showed that,
 although the genome-wide ``background'' mutation rate is unaltered in
-schizophrenia, specific genomic elements and gene sets are enriched in (in
-other words bear increased burden of) SNVs in schizophrenics relative to
+schizophrenia, specific genomic elements and gene sets bear increased burden
+of---in other words: are enriched in---SNVs in schizophrenic individuals relative to
 controls.  We sought to test enrichment in several genomic elements or gene
-sets.
+sets (see Table below).  To that end we established statistical procedures.
+
+\subsubsection*{Pairwise joint distributions of response and explanatory variables}
+
+[notebook/2021-01-26-indiv-counts-modeling]
+
+For a genomic element or gene set  \(S\) we inspected the joint distribution,
+across all study subjects, of disease status Dx, two enrichment variables
+\(n_S\), \(f_S\), and technical and biological variables that potentially
+carry information on those enrichment variables.  The enrichment variable
+\(n_S\) is the number of somatic SNVs located in \(S\), whereas the \(f_S =
+	n_S/n_\mathrm{genome}\) is the fraction of somatic SNVs in \(S\)
+relative to all somatic SNVs in the genome.  The aim was to formally test
+enrichment in \(S\) in schizophrenia by regressing the response variables
+\(n_S\) or \(f_S\) on the explanatory variable Dx
+and other, ``confounding'', variables.
+
+In case of the plot matrix below \(S\) is the set of schizophrenia GWAS genes
+defined as all genes, including their introns, that are located fully or
+partially in schizophrenia GWAS loci (Table S4 in \cite{Pardinas2018}).
+
+Notable observations:
+\begin{itemize}
+	\item the strongsest dependence was seen between \(n_S\) and \(n_\mathrm{genome}\) as expected
+		when the genome-wide background rate of somatic SNVs is
+		substantial relative to enrichment in \(S\)
+	\item we have already noted the strong dependence between read depth DP and
+		\(n_\mathrm{genome}\)
+        \item other dependencies were relatively weak
+	\item for many control individuals ageOfDeath is below 50 years while for
+		most schizophrenic individuals it is above 50.  This is
+		because the Mount Sinai dataset contained older individuals
+		that were either control or schizophrenic but the Harvard dataset contained
+		only younger control individuals
+\end{itemize}
+
+%\begin{figure}
+\includegraphics[scale=0.6]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/symmetric-scatter-matrix_scz.pdf}
+
+%\caption{Pairwise joint distributions of response and explanatory variables
+%	TODO: fix legend}
+%\end{figure}
+
+\subsubsection*{Modeling the number (A) and fraction (B) of somatic SNV calls in a gene set}
+
+[notebook/2021-01-26-indiv-counts-modeling]
+
+We considered two generalized linear model families depending on the response
+variable:
+\begin{description}
+\item[response is \(f_S\):] logistic family: binomial error distribution with
+	logistic link function; see panel (A)
+\item[response is \(n_S\):] log-linear family: Poisson error distribution with exponential link function; see panel (B)
+\end{description}
+
+Within each family we considered relatively simple or complex models depending
+on the set of variables selected as explanatory.  For \(S =\) schizophrenia
+GWAS genes, and within the
+logistic family, panel (A) shows fitted lines under both \(f_S \sim 1 +
+	\mathrm{Dx}\) and \(f_S \sim 1 + \mathrm{Dx} + \mathrm{ageOfDeath}\)
+(panel (A)), where \(1\) means intercept.  For the log-linear family panel (B)
+shows fitted lines under both \(n_S \sim 1 + \mathrm{Dx}\) and \(n_S \sim 1 +
+	\mathrm{Dx} + \(n_\mathrm{genome}\)\)
+
+%\begin{figure}
+A\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-ageOfDeath-binom-fit_scz.pdf}
+B\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-log10_ncalls-poisson-fit_scz.pdf}
+
+%\caption{Modeling the number (A) and fraction (B) of somatic SNV calls in a
+%gene set}
+%\end{figure}
+
+\subsubsection*{Variable selection for regression models}
+
+[notebook/2021-01-26-indiv-counts-modeling]
+
+To select the best fitting model within each family we applied forward
+variable selection algorithm with the Akaike information criterion (AIC) as
+optimality criterion.  (The Bayesian (BIC) information instead of AIC gave the
+same results.)
+
+Still in the case of \(S =\) schizophrenia GWAS genes we see that the first,
+thus most informative, variable selected is Dx under the logistic model (panel A).
+Any additional variables increased the information criteria and thus lead to
+overfitting the data.
+
+Panel (B) shows the same result under the log-linear model except that the
+most informative variable is \(n_\mathrm{genome}\), which was expected by its
+strong correlation with \(n_S\).  Nonetheless, Dx is selected also under this
+model family.
+
+%\begin{figure}
+A
+
+\includegraphics[scale=0.5]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-fw-varsel-binom-onlyIC_scz.pdf}
+
+B
+
+\includegraphics[scale=0.5]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-fw-varsel-pois-onlyIC_scz.pdf}
+%\caption{Variable selection for regression models. A) Binomial--logistic
+%	family.  B) Poisson--log-linear family.}
+%\end{figure}
+
+\subsubsection*{The effect of ageOfDeath and that of Dataset are mediated by disease status Dx}
+
+[notebook/2021-01-26-indiv-counts-modeling]
+
+Enrichment is independent of ageOfDeath for a given Dataset
+
+%\begin{figure}
+A\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/Dx_Dataset_ageOfDeath_scz.pdf}
+B\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/collinearity_Dx_Dataset_ageOfDeath_scz.pdf}
+%\caption{The effect of ageOfDeath and that of Dataset are mediated by disease status Dx.  H: Harvard Dataset,
+%S: Mount Sinai Dataset}
+%\end{figure}
+
+\subsubsection*{Residual analysis to assess model fit }
+
+[notebook/2021-01-26-indiv-counts-modeling]
+
+%\begin{figure}
+\includegraphics[width=0.9\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/resid-binom.pdf}
+%\caption{Residual analysis to assess model fit for genomic elements and gene
+%sets of increasing size (from top left to bottom right)}
+%\end{figure}
+
+\subsubsection*{Genomic elements and gene sets}
+
+[notebook/2021-01-26-indiv-counts-modeling]
 
 %\begin{table}
 \begin{tabular}{lrlr}
@@ -208,59 +341,9 @@ GWAS gene sets & ADHD GWAS & 1 + AF + DP & 6 \\
 %	nonsyn'' and ``coding syn''}
 %\end{table}
 
-\subsubsection*{Pairwise joint distributions of response and explanatory variables}
-
-%\begin{figure}
-\includegraphics[scale=0.6]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/symmetric-scatter-matrix_scz.pdf}
-
-%\caption{Pairwise joint distributions of response and explanatory variables
-%	TODO: fix legend}
-%\end{figure}
-
-\subsubsection*{Modeling the number (A) and fraction (B) of somatic SNV calls in a gene set}
-
-%\begin{figure}
-A\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-ageOfDeath-binom-fit_scz.pdf}
-B\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-log10_ncalls-poisson-fit_scz.pdf}
-
-%\caption{Modeling the number (A) and fraction (B) of somatic SNV calls in a
-%gene set}
-%\end{figure}
-
-\subsubsection*{Variable selection for regression models}
-
-%\begin{figure}
-A
-
-\includegraphics[scale=0.5]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-fw-varsel-binom-onlyIC_scz.pdf}
-
-B
-
-\includegraphics[scale=0.5]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz_gwas_genes-fw-varsel-pois-onlyIC_scz.pdf}
-%\caption{Variable selection for regression models. A) Binomial--logistic
-%	family.  B) Poisson--log-linear family.}
-%\end{figure}
-
-\subsubsection*{The effect of ageOfDeath and that of Dataset are mediated by disease status Dx}
-
-Enrichment is independent of ageOfDeath for a given Dataset
-
-%\begin{figure}
-A\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/Dx_Dataset_ageOfDeath_scz.pdf}
-B\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/collinearity_Dx_Dataset_ageOfDeath_scz.pdf}
-%\caption{The effect of ageOfDeath and that of Dataset are mediated by disease status Dx.  H: Harvard Dataset,
-%S: Mount Sinai Dataset}
-%\end{figure}
-
-\subsubsection*{Residual analysis to assess model fit }
-
-%\begin{figure}
-\includegraphics[width=0.9\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/resid-binom.pdf}
-%\caption{Residual analysis to assess model fit for genomic elements and gene
-%sets of increasing size (from top left to bottom right)}
-%\end{figure}
-
 \subsubsection*{Enrichment of genomic elements and gene sets in somatic SNVs in schizophrenia}
+
+[notebook/2021-01-26-indiv-counts-modeling]
 
 %\begin{figure}
 \includegraphics[width=0.9\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/enrichment-5-plots_scz.pdf}
