--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -275,7 +275,19 @@ B
 
 [notebook/2021-01-26-indiv-counts-modeling]
 
-Enrichment is independent of ageOfDeath for a given Dataset
+As we noted one of our two datasets contained relatively young individuals who
+were all control.  This leads to the causal-probabilistic graphical model that
+\(\mathrm{ageOfDeath} \leftarrow \mathrm{Dataset} \rightarrow \mathrm{Dx}
+	\rightarrow y\)\), where \(y\) is the response enrichment variable
+\(f_S\) or \(n_S\).  It means that ageOfDeath and
+Dataset have indirect effects on enrichment such that these effects are
+mediated by disease status Dx. If this model is true then \(Dx\) d-separates
+\(y\) from Dataset and ageOfDeath so that \(y\) becomes independent from
+ageOfDeath and Dataset if we condition on Dx = control or Dx =
+schizophrenia.  Panel (A) illustrates that.  The important consequence is
+that we should remove ageOfDeath and Dataset from the set from our models as long
+as we include Dx.  Failing to do so may confound our
+inference on the effect of Dx on enrichment (Panel B).
 
 %\begin{figure}
 A\includegraphics[scale=0.45]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/Dx_Dataset_ageOfDeath_scz.pdf}
